--- a/pages/contato.html
+++ b/pages/contato.html
@@ -9,33 +9,47 @@
     <link rel="shortcut icon" href="">
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="contato.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Kdam+Thmor+Pro&display=swap');
     </style>
 </head>
 
 <body>
-    <div class="contatoGrid">
+    
         <div class="cabecalhoGrid">
             <div class="titulo">
-                <h1 class="logo">Posto de molas Santin</h1>
+                <h1 class="logo">Molas Santin</h1>
             </div>
             <div>
                 <img class="caminhao" src="images/Caminhao.png" alt="caminhao">
             </div>
         </div>
 
-        <div class="menuGrid">
-            <list>
-                <ul class="listaInicial">
-                    <li><a href="index.html"> Home </a></li>
-                    <li><a href="servicos.html">Serviços</a></li>
-                    <li><a href="historia.html">Nossa história</a></li>
-                    <li><a href="contato.html">Contato</a></li>
-                    <li><a href="encomendar.html">Encomendar</a></li>
+        <nav class="navbar" style="background-color: rgb(10, 18, 143)">
+            <div class="container-fluid" >
+              <a class="navbar-brand" style="color: white;" href="index.html">Home</a>
+              <button style="color: white;" class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+              </button>
+              <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav">
+                  <li class="nav-item">
+                    <a style="color: white;" class="nav-link active" aria-current="page" href="contato.html">Contato</a>
+                  </li>
+                  <li class="nav-item">
+                    <a style="color: white;" class="nav-link" href="servicos.html">serviços</a>
+                  </li>
+                  <li class="nav-item">
+                    <a style="color: white;" class="nav-link" href="historia.html">Nossa história</a>
+                  </li>
+                  <li class="nav-item">
+                    <a style="color: white;" class="nav-link" href="encomendar.html">Encomendar</a>
+                  </li>
                 </ul>
-            </list>
-        </div>
+              </div>
+            </div>
+          </nav>
 
         <div class="corpoContato">
             <div class="tituloContato">
@@ -111,8 +125,8 @@
 
         </footer>
 
-    </div>
-
+    
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
 </body>
 
 </html>
