add de SEO e maps

--- a/pages/contato.html
+++ b/pages/contato.html
@@ -5,6 +5,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Empresa especializada em venda e manutenção de molas">
+    <meta name="keywords" content="Molas, Santin, feixe, RS, Oficina, Mecânica, Contato">
     <title>Contatos</title>
     <link rel="shortcut icon" href="">
     <link rel="stylesheet" href="style.css">
