--- a/encomendar.html
+++ b/encomendar.html
@@ -161,6 +161,8 @@
     <footer class="rodape">
         <p>Endereço: xxxxx xx xxx, xxx</p>
         <br>
+        <p><iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3393.800752725063!2d-52.34576758794805!3d-31.721337310953132!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x9511b54badf91e55%3A0x73289c9dc3655d11!2sMolas%20Santin!5e0!3m2!1spt-BR!2sbr!4v1707849633413!5m2!1spt-BR!2sbr" width="400" height="350" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe></p>
+        <br>
         <p>Fone: (53) xxxxx-xxxx</p>
         <br>
         <p><b>Todos os direitos reservados</b></p>
